--- a/src/template/index.template.html
+++ b/src/template/index.template.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title></title>
-        <link rel="stylesheet" href="./style/main.css">
+        <link rel="stylesheet" href="../style/main.css">
     </head>
     <body>
 
-        <script src="./scripts/main.js" charset="utf-8"></script>
+        <!-- <script src="../scripts/main.js" charset="utf-8"></script> -->
     </body>
 </html>
