--- a/template/src/index.pug
+++ b/template/src/index.pug
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>title</title>
+  <script src="https://cdn.bootcdn.net/ajax/libs/zepto/1.2.0/zepto.min.js"></script>
 </head>
 <body>
-  
+  <p>你好</p>
 </body>
 </html>
