--- a/template/src/styles/index.styl
+++ b/template/src/styles/index.styl
@@ -1,4 +1,11 @@
-body 
+body, html
   width: 100%;
   height: 100vh;
-  background-color: red;
+  margin: 0; padding:0;
+  background-color: #ddd;
+  display: flex;
+  justify-content: center;
+  p
+    margin:0; padding: 0;
+    font-size: 12px;
+    
