--- a/template/src/index.pug
+++ b/template/src/index.pug
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>title</title>
-  <script src="https://cdn.bootcdn.net/ajax/libs/zepto/1.2.0/zepto.min.js"></script>
-</head>
-<body>
-  <p>你好</p>
-</body>
-</html>
+html(lang="zh")
+  head
+    meta(charset="UTF-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    script(src="https://cdn.bootcdn.net/ajax/libs/zepto/1.2.0/zepto.min.js")
+    title 
+  body
+    include templates/header.pug
